Create ProductResponse and ProductRequest